--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
+                  
+              
                 <img
+                 src="http://openweathermap.org/img/wn/50d@2x.png"
                   src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                   alt="Clear"
                   id="icon"
@@ -68,7 +71,7 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
+          <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">
