--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="col-2">
               <ul>
                 <li>Humidity:<span id="humidity"></span>%</li>
-                <li>wind :2km/h:</li>
+                <li>wind :2km/h:<span id="wind">%</span></li>
               </ul>
             </div>
           </div>
