--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <div class="col-2">
               <ul>
                 <li>Humidity:<span id="humidity"></span>%</li>
-                <li>wind :2km/h:<span id="wind">%</span></li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+                
               </ul>
             </div>
           </div>
